argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - argocd.141-148-93-60.sslip.io
      secretName: argocd-tls
  rules:
    - host: argocd.141-148-93-60.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
